<resources>
    <string name="title_home">Fulora</string>
    <string name="title_register_plant">Registrar planta</string>
    <string name="title_configure">Configurar</string>
    <string name="title_access_account">Acessar conta</string>
    <string name="title_about">Sobre</string>
    <string name="title_exit">Sair</string>

    <string name="quit">Sair</string>
    <string name="want_to_quit">Você tem certeza que deseja sair?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceitar</string>

    <string name="about_text">Fulora é um app para você gerenciar os cuidados das suas plantas.\n\nNele, você cadastra a sua planta, os melhores dias da semana e o horário para ser lembrado.\n\nAssim que finaliza</string>

    <string name="empty_text_plantation">Você não tem nada cadastrado ainda. Que tal adicionar?</string>


    <string name="what_plant_register">Qual será a planta que será cadastrada nesta área?</string>
    <string name="select_which_time">Selecione o horário que deseja ser avisado dos cuidados com esta área de plantio</string>
    <string name="insert_plant_name">Inserir nome da planta</string>


    <string name="error_insert_plant_name">Este campo não foi preenchido!</string>
    <string name="error_spinner_plant_time">Este campo não foi selecionado!</string>
    <string name="select_time">Selecione a hora</string>
    <string name="save">Salvar</string>
    <string name="name">Nome</string>
    <string name="change_password">Você gostaria de mudar sua senha?</string>
    <string name="old_password">Senha atual</string>
    <string name="new_password">Senha nova</string>
    <string name="confirm_password">Confirmar senha nova</string>
    <string name="new_password_didnt_match_confirm_password">Nova senha e confirmar senha não são as mesmas.</string>
    <string name="password_invalid">Não é a sua senha antiga!</string>
    <string name="you_need_to_select_a_time">Você precisa selecionar um horário.</string>

    <string name="please_try_again">Não foi possível adicionar sua planta, tente novamente!</string>

    <string-array name="spinner_remember_me">
        <item>Lembrar-me</item>
        <item>De manha (09:00)</item>
        <item>De tarde (15:00)</item>
        <item>De noite (20:00)</item>
        <item>Escolher horario</item>
    </string-array>
</resources>