<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_planting_area"
            android:title="@string/title_home" />
        <item
            android:id="@+id/menu_access_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/title_access_account" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/title_about" />
    </group>
    <group android:checkableBehavior="single" android:menuCategory="container">
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/title_exit" />
    </group>
</menu>