<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_online"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.fulora.online.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_registerFragment"
            app:destination="@id/registerFragment"/>
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.fulora.online.ui.register.RegisterFragment"
        android:label="@string/title_register_plant"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.fulora.online.ui.account.AccountFragment"
        android:label="@string/title_access_account"
        tools:layout="@layout/fragment_account" />
    <action
        android:id="@+id/action_global_accountFragment"
        app:destination="@id/accountFragment" />
</navigation>