<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.fulora.online.ui.account.AccountViewModel" />
    </data>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp"
            android:fillViewport="true"
            tools:context=".ui.account.AccountFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textWebEmailAddress"
                        android:text="@{String.valueOf(viewModel.name)}"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_change_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18ssp"
                    android:text="@string/change_password"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/text_change_password"
                    app:layout_constraintTop_toBottomOf="@+id/text_change_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/old_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/input_old_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_old_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/input_new_password"
                    app:layout_constraintTop_toBottomOf="@+id/input_new_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    style="@style/FuloraButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintVertical_bias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>