<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.fulora.online.ui.register.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp"
        android:fillViewport="true"
        tools:context=".ui.register.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_what_plant_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/what_plant_register"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxBackgroundColor="@color/design_default_color_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_what_plant_register">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_plant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_plant_name"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    app:errorEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_select_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/select_which_time"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <Spinner
                android:id="@+id/spinner_time"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:entries="@array/spinner_remember_me"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_select_time" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                style="@style/FuloraButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>